update leaderboard section

--- a/frontend/src/app/styles/globals.css
+++ b/frontend/src/app/styles/globals.css
@@ -5,3 +5,9 @@
 body{
     font-family: "Inter", sans-serif;
 }
+
+[aria-current='page'] {
+    background-color: #3b82f6 !important;
+    color: white !important;
+    border-color: #3b82f6 !important;
+  }
